tests/negative_pomidory/prereqs_test2.pomidor
App Name:
Version:
Release date:

Sprint:


!!Used for test_pomidor_csv_data_with_prereqs!!
@Feature CSV_data
@prereq Loginsq
@param delete_cookies, full_screen
@DATA   pageObjects/csv_data_source.csv
@name   Logins prereq2 scenario
Comment first line - First, click on login_field #practice_menu_button page title
and type <<FirstName>> in #name_field. Then, type [[some
free text]] in #name_field,

@Feature CSV_data3
@prereq Google_search_timeout
@param   delete_cookies, full_screen
@DATA   pageObjects/csv_data_source.csv
@url     practice_page
!!Comment first line - First, click on login_field #practice_menu_button page title
Google_search_timeout scenario
and type <<FirstName>> in #name_field.

!!Used for test_pomidor_csv_data_with_prereqs!!
@Feature CSV_data3
@prereq Login
@param   delete_cookies, full_screen
@DATA   pageObjects/csv_data_source.csv
@url     practice_page
!!Comment first line - First, click on login_field #practice_menu_button page title
Login prereq2 scenario
and type <<FirstName>> in #name_field.

!!Used for test_pomidor_csv_data_with_prereqs!!
@Feature CSV_data3
!!@prereq Login
@param   delete_cookies, full_screen
@DATA   pageObjects/csv_data_source.csv
@url     practice_page
!!Comment first line - First, click on login_field #practice_menu_button page title
Login prereq2 scenario
and type <<FirstName>> in #name_field.